--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -76,6 +76,9 @@ color: $white1
         display: flex;
         align-items: center;
         cursor: pointer;
+        @media screen and (max-width: 700px) {
+          font-size: 0.5rem;
+        }
         &:first-child{
             background: $white1;
             color: $black1;
@@ -93,6 +96,9 @@ color: $white1
         max-width: 300px;
         justify-content: space-around;
         margin-right: 10px;
+        @media screen and (max-width: 700px){
+          display: none;
+        }
         li{
           transition: 0.15s;
           cursor: pointer;
