--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -38,6 +38,9 @@ img{
     h2{
         @include title;
         font-size: 3rem;
+        @media screen and (max-width: 700px){
+            font-size: 1.5rem;
+        }
 
     }
     p{
@@ -45,6 +48,40 @@ img{
         margin: 30px auto;
         line-height: 35px;
         font-style: italic;
+        font-size: 0.8rem;
+    }
+    .btn{
+        margin: 50px 0 90px;
+    }
+}
+.section2{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    border-top: 1px solid $grey1;
+    @media screen and (max-width: 700px){
+        grid-template-columns: 1fr;
+    }
+    .left-part, .right-part{
+        padding: 60px;
+      
+        span{
+            font-size: 0.75rem;
+
+        }
+        h3{
+            margin: 20px 0;
+            @include title;
+            line-height: 28px;
+        }
+        p{
+            text-align: left;
+            line-height: 30px;
+            margin: 30px 0;
+            font-size: 0.8rem;
+        }
+    }
+    .left-part{
+        border-right: 1px solid $grey1;
     }
 }
 }
